--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#0ca6eb" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Obsidium" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <link rel="canonical" href="https://obsidium.dev" />
-    <title>Obsidium | Web Development Company</title>
-    <meta name="description" content="Expert web development services including custom websites, e-commerce solutions, and web applications. Transform your digital presence with Obsidium." />
+    <title>Obsidium</title>
   </head>
   <body>
     <div id="root"></div>
