--- a/index.html
+++ b/index.html
@@ -5,6 +5,37 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obsidium</title>
+
+    <!-- Primary Meta Tags -->
+    <meta name="description"
+      content= "Obsidium builds custom, high-performance websites and digital solutions to help businesses grow online through cutting-edge design and modern web development." 
+      />
+    
+    
+    <meta name="keywords"
+      content="Web Development Services, Web Design Agency, Custom Website Development, Professional Website Design, Modern Web Solutions
+       Web Development Company, Responsive Website Design, Front-End Development, React Development Services, UI/UX Web Design, Business Website Solutions,
+       SEO-Optimized Websites, Website Redesign Services" />
+    <meta name="author" content="Obsidium Web Development" />
+    <meta name="location" content="Prishtina, Kosovo"/>
+
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.obsidium-dev.com" />
+    <meta property="og:title" content="Obsidium – Professional Web Development & Design" />
+    <meta property="og:description"
+      content="Responsive websites, e-commerce solutions, and web development tailored for your brand." />
+      <meta property="og:image" content="https://i.imgur.com/r6zhhOv.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.obsidium-dev.com" />
+    <meta name="twitter:title" content="Obsidium – Professional Web Development & Design" />
+    <meta name="twitter:description"
+      content="Responsive websites, e-commerce solutions, and web development tailored for your brand." />
+    <meta name="twitter:image" content="https://i.imgur.com/r6zhhOv.png" />
+
   </head>
   <body>
     <div id="root"></div>
